--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "opcodesio/log-viewer": "^3.11",
         "yoeunes/toastr": "^3.0"
     },
     "require-dev": {
